# solana-debugger-cli

./: Cargo.toml  README.md  tutorial.md
src/: main.rs
src/commands/: init.rs  mod.rs  status.rs  var.rs
src/compile/: correct_file.rs  mod.rs  project.rs  sbf_with_errors.rs
src/instrument/: ast.rs  ast_custom_types.rs  ast_general.rs  fixed_serialization.rs  mod.rs  project.rs  source.rs
src/instrument/custom_types/: enums.rs  structs.rs
src/output/: generate.rs  mod.rs  parse.rs  print_node.rs
src/utils/: debugee_project_info.rs  debugger_cache.rs  mod.rs  program_input.rs
