[package]
name = "solana-debugger-cli"
version = "0.1.0"
edition = "2021"
description = "Solana Debugger CLI"
authors = ["Maxim Schmidt <mail@maximschmidt.com>"]

[dependencies]
clap = { version = "4.5.26" , features = ["cargo"]}
solana-sdk = "=2.1.9"
solana-program = "=2.1.9"
solana-program-test = "=2.1.9"
tokio = "1.43.0"
log = "0.4.25"
prettyplease = "0.2.29"
quote = "1.0.38"
syn = { version = "2.0.96", features = ["full", "parsing", "extra-traits", "visit", "visit-mut", "derive", "fold"] }
proc-macro2 = { version = "=1.0.93", features = ["span-locations"] }
cargo_metadata = "=0.19.1"
base64 = "0.22.1"
solana-account = "=2.1.9"
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
solana-account-decoder-client-types = "=2.1.9"
solana-rpc-client-api = "=2.1.9"
colored = "3.0.0"
dirs = "=6.0.0"
